<resources>
    <string name="app_name">RUCafe</string>
    <string name="syrup">Syrup</string>
    <string name="cream">Cream</string>
    <string name="caramel">Caramel</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="milk">Milk</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_item">Remove Item</string>
    <string name="coffee_menu">Coffee Menu</string>
    <string name="donut_menu">Donut Menu</string>
    <string name="subtotal">Sub-Total</string>
    <string name="quantity">Quantity</string>
    <string name="current_order">Current Order</string>
    <string name="stored_orders">Stored Orders</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="total_price">Total Price</string>
    <string name="place_order">Place Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_item">Add Item</string>
    <string name="menu_title">RUCafe [Main Menu]</string>
    <string name="main_title">Menu</string>
    <string name="donut_activity_title">RUCafe [Donut Menu]</string>
    <string name="coffee_activity_title">RUCafe [Coffee Menu]</string>
    <string name="current_order_activity_title">RUCafe [Current Order]</string>
    <string name="stored_orders_activity_title">RUCafe [Stored Orders]</string>
    <string name="size">Size</string>
    <string-array name="quantity_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="coffee_size_list">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string-array name="donut_list">
        <item>Donut Holes Glazed</item>
        <item>Donut Holes Chocolate</item>
        <item>Donut Holes Vanilla</item>
        <item>Yeast Donuts Glazed</item>
        <item>Yeast Donuts Chocolate</item>
        <item>Yeast Donuts Vanilla</item>
        <item>Cake Donuts Glazed</item>
        <item>Cake Donuts Chocolate</item>
        <item>Cake Donuts Vanilla</item>
    </string-array>
    <string name="default_price">$0.00</string>
    <string name="success_add_to_shopping_cart">Successfully added to your shopping cart!
        Please check your current orders or the shopping cart icon to checkout your items!</string>
    <string name="empty_shopping_cart_message">Please add some items before trying to add to the
        shopping cart!</string>
    <string name="invalid_selection">Please select a valid item from the list!</string>
    <string name="empty_cart">There are no current items in the cart! Please navigate back to
        the menu and select some items to checkout!</string>
    <string name="added_to_stored_order_message">Successfully added your current order! To view
        your previous orders, please click on the clipboard icon in the main menu.</string>
    <string name="empty_stored_order_message">There are no orders placed! Please navigate back to
        the menu and place some orders!</string>
    <string name="invalid_quantity">Please enter a non-negative and non-empty/zero quantity that
        is below or equal to 2147483647.</string>
    <string name="coffee_caption">Coffee Picture</string>
    <string name="donut_caption">Donut Picture</string>
    <string name="cart_caption">Shopping Cart Picture</string>
    <string name="checklist_caption">Checklist Picture</string>

</resources>