<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/coffeeSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/coffeeSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/coffee_size_list"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/syrupCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/creamCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkCream"
        android:text="@string/cream"
        app:layout_constraintBottom_toTopOf="@+id/milkCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/caramelCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkCaramel"
        android:text="@string/caramel"
        app:layout_constraintBottom_toBottomOf="@+id/milkCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/milkCheck"
        app:layout_constraintTop_toTopOf="@+id/milkCheck"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/milkCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkMilk"
        android:text="@string/milk"
        app:layout_constraintBottom_toTopOf="@+id/whippedCreamCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/subtotal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addToCartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/whippedCreamCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="checkWhippedCream"
        android:text="@string/whippedcream"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="addToShoppingCart"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/syrupCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkSyrup"
        android:text="@string/syrup"
        app:layout_constraintBottom_toBottomOf="@+id/creamCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toEndOf="@+id/creamCheck"
        app:layout_constraintTop_toTopOf="@+id/creamCheck"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/coffeeQuantity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:entries="@array/quantity_list"
        android:scrollbarSize="4dp"
        android:spinnerMode="dropdown"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/coffeeSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/coffee" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeSize"
        app:layout_constraintEnd_toStartOf="@+id/coffeeSize"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coffeeSize"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>